--- a/food.html
+++ b/food.html
@@ -19,7 +19,7 @@
     <div class="container"></div>
     <h2>อาหารภาคเหนือ</h2>
     <p>1.ข้าวซอย</p>
-    <img src="images/Khao-Soi.jpg" alt="ข้าวซอย" class="card-img">
+    <img src="Khao-Soi.jpg" alt="ข้าวซอย" class="card-img">
      <div class="card">
         <p>ข้าวซอย เป็นอาหารพื้นเมืองทางภาคเหนือของไทยที่มีต้นกำเนิดจากการผสมผสานวัฒนธรรมอาหารของชาวจีนยูนนาน (จีนฮ่อ) ที่อพยพมาตั้งรกรากทางภาคเหนือ พม่า และลาว เดิมเป็น “ข้าวซอยน้ำใส” ที่ใช้เส้นบะหมี่สด ก่อนจะถูกปรับปรุงสูตรใส่กะทิและพริกแกงจนมีรสชาติหวานมัน กลมกล่อม ซึ่งเป็นเอกลักษณ์ที่รู้จักกันในปัจจุบัน</p>
         </div>
@@ -28,7 +28,7 @@
 <section class="about">
     <div class="container"></div>
     <p>2.น้ำพริกหนุ่ม-แคบหมู</p>
-    <img src="images/Namphrik-Num.jpg" alt="น้ำพริกหนุ่ม" class="card-img">
+    <img src="Namphrik-Num.jpg" alt="น้ำพริกหนุ่ม" class="card-img">
      <div class="card">
         <p>น้ำพริกหนุ่มและแคบหมู เป็นอาหารพื้นบ้านล้านนาที่เป็นเอกลักษณ์ทางวัฒนธรรมการกินของภาคเหนือมาอย่างช้านาน โดยไม่ปรากฏหลักฐานแน่ชัดว่าเกิดขึ้นในยุคใด เกิดจากการที่ชาวบ้านนำวัตถุดิบในท้องถิ่นมาโขลกและย่างไฟ โดยเฉพาะพริกหนุ่มที่ยังไม่แก่จัด ซึ่งมักทานคู่กันเพื่อรสชาติที่อร่อย กลมกล่อม และเป็นของฝากยอดนิยม </p>
         </div>
@@ -37,7 +37,7 @@
 <section class="about">
     <div class="container"></div>
     <p>3.ขนมจีนน้ำเงี้ยว</p>
-    <img src="images/Nam-Ngiao.jpg" alt="น้ำเงี้ยว" class="card-img">
+    <img src="Nam-Ngiao.jpg" alt="น้ำเงี้ยว" class="card-img">
      <div class="card">
         <p>ขนมจีนน้ำเงี้ยว เป็นอาหารพื้นเมืองเหนือที่มีรากเหง้าจากชาวไทใหญ่ (เงี้ยว) ในรัฐฉาน ประเทศพม่า ที่อพยพเข้ามาในภาคเหนือของไทย คำว่า "น้ำเงี้ยว" แปลว่า แกงของชาวเงี้ยว โดยจุดเด่นคือการใช้ดอกงิ้วเป็นส่วนผสมหลัก น้ำซุปเข้มข้นจากการเคี่ยวซี่โครงหมูและเลือด ผสมผสานวัฒนธรรมล้านนาจนเป็นเมนูยอดนิยม </p>
         </div>
@@ -46,7 +46,7 @@
 <section class="about">
     <div class="container"></div>
     <p>4.แกงฮังเล</p>
-    <img src="images/Hangle.jpg" alt="แกงฮังเล" class="card-img">
+    <img src="Hangle.jpg" alt="แกงฮังเล" class="card-img">
      <div class="card">
         <p>แกงฮังเล เป็นอาหารพื้นเมืองภาคเหนือของไทยที่ได้รับอิทธิพลมาจากพม่า โดยคำว่า "ฮังเล" เพี้ยนมาจากภาษาพม่าคำว่า "ฮินเล" (ဟင်းလေး) ที่หมายถึงแกงเนื้อสัตว์ หรือ แวะตาฮีน (แกงหมู) ต้นกำเนิดมาจากเมนูแกงเนื้อของพม่า-มอญ ที่ใช้เครื่องเทศเข้มข้น ดัดแปลงให้เข้ากับวัฒนธรรมล้านนา โดยมีจุดเด่นคือการใช้หมูสามชั้นเคี่ยวจนนุ่ม ไม่ใส่กะทิ รสชาติเปรี้ยว เค็ม หวาน หอมเครื่องเทศ </p>
         </div>
@@ -55,7 +55,7 @@
 <section class="about">
     <div class="container"></div>
     <p>5.แกงโฮะ</p>
-    <img src="images/Kaeng-Ho.jpg" alt="แกงโฮะ" class="card-img">
+    <img src="Kaeng-Ho.jpg" alt="แกงโฮะ" class="card-img">
      <div class="card">
         <p>แกงโฮะ เป็นอาหารพื้นเมืองภาคเหนือที่มีประวัติจากการเป็นอาหารที่ "โฮะ" หรือ "รวม" ของเหลือจากการทำบุญที่วัด เช่น แกงฮังเล แกงอ่อม หรือหมูทอด มาผัดรวมกันเพื่อลดขยะอาหาร (Food Waste) นิยมใส่หน่อไม้ดอง วุ้นเส้น และใบมะกรูด รสชาติเข้มข้น จัดจ้านคล้ายคั่วแห้ง </p>
         </div>
@@ -64,7 +64,7 @@
 <section class="about">
     <div class="container"></div>
     <p>6.ไส้อั่ว</p>
-    <img src="images/Sai-ua.jpg" alt="ไส้อั่ว" class="card-img">
+    <img src="Sai-ua.jpg" alt="ไส้อั่ว" class="card-img">
      <div class="card">
         <p>ไส้อั่ว เป็นอาหารพื้นเมืองภาคเหนือของไทยที่มีประวัติยาวนานตั้งแต่สมัยอาณาจักรล้านนา เดิมเกิดจากภูมิปัญญาชาวบ้านที่ต้องการถนอมอาหาร (การยัดเนื้อหมูผสมสมุนไพรลงในไส้หมูแล้วย่าง) เพื่อเก็บไว้กินได้นานๆ หลังจากล้มหมูในงานบุญประเพณี เป็นเมนูที่สะท้อนวัฒนธรรมการกินที่อุดมด้วยสมุนไพรและเป็นของฝากยอดนิยม</p>
         </div>
