--- a/tradition.html
+++ b/tradition.html
@@ -19,7 +19,7 @@
     <div class="container"></div>
     <h2>ประเพณีภาคเหนือ</h2>
     <p>1.ประเพณียี่เป็ง</p>
-    <img src="images/yee-peng.jpg" alt="ยี่เป็ง" class="card-img">
+    <img src="yee-peng.jpg" alt="ยี่เป็ง" class="card-img">
      <div class="card">
         <p>
        ประเพณียี่เป็ง (ป๋าเวณียี่เปง) หรือประเพณีเดือนยี่ เป็นประเพณีเก่าแก่ของชาวล้านนาในภาคเหนือที่ปฏิบัติสืบต่อกันมาอย่างยาวนาน โดยคำว่า "ยี่" หมายถึง เดือนที่สอง และ "เป็ง" หมายถึง คืนวันเพ็ญ กิจกรรมนี้จัดขึ้นตรงกับ วันเพ็ญเดือน 12 ตามปฏิทินไทย ซึ่งมักจะอยู่ในช่วงเดือนพฤศจิกายน 
@@ -38,7 +38,7 @@
 <section class="about">
     <div class="container"></div>
     <p>2.ประเพณีเวียนเทียนกลางนํ้า</p>
-    <img src="images/Wian-Thia.jpg" alt="เวียนเทียนกลางน้ำ" class="card-img">
+    <img src="Wian-Thia.jpg" alt="เวียนเทียนกลางน้ำ" class="card-img">
      <div class="card">
         <p>
         ประเพณีเวียนเทียนกลางน้ำ กว๊านพะเยา เป็นประเพณีหนึ่งเดียวในโลกที่จัดขึ้น ณ วัดติโลกอาราม จ.พะเยา โดยชาวบ้านจะนั่งเรือพายเวียนเทียนรอบวัดโบราณอายุเก่าแก่กว่า 500 ปีที่อยู่กลางกว๊าน 3 รอบ ในวันสำคัญทางศาสนา (มาฆบูชา, วิสาขบูชา, อาสาฬหบูชา) เพื่อสืบสานวัฒนธรรมและความศรัทธา 
@@ -54,7 +54,7 @@
 <section class="about">
     <div class="container"></div>
     <p>3.ประเพณีลอยไหลประทีบพันดวง</p>
-    <img src="images/Loikrathong.jpg" alt="ลอยกระทงสายไหลประทีป" class="card-img">
+    <img src="Loikrathong.jpg" alt="ลอยกระทงสายไหลประทีป" class="card-img">
      <div class="card">
         <p>
         ประเพณี ลอยกระทงสายไหลประทีป 1,000 ดวง เป็นประเพณีท้องถิ่นอันเป็นเอกลักษณ์ของ จ.ตาก ที่สืบทอดมาแต่บรรพบุรุษ โดยใช้กะลามะพร้าวมาขัดทำกระทง ใส่ด้ายฟั่นรูปตีนกา และลอยต่อเนื่องกันในแม่น้ำปิงจนดูเป็นสายแสงระยิบระยับ เชื่อเป็นการขอขมาพระแม่คงคา บูชาพระพุทธเจ้า 5 พระองค์ และบูชารอยพระพุทธบาท
@@ -70,7 +70,7 @@
 <section class="about">
     <div class="container"></div>
     <p>4.ประเพณีตานก๋วยสลาก</p>
-    <img src="images/Tan-KuaiSalak.jpg" alt="ต๋านก๋วยสลาก" class="card-img">
+    <img src="Tan-KuaiSalak.jpg" alt="ต๋านก๋วยสลาก" class="card-img">
      <div class="card">
         <p>
        ประเพณีตานก๋วยสลาก (ทานสลากภัต) เป็นประเพณีสำคัญของล้านนาที่สืบทอดมาช้านาน จัดขึ้นช่วงวันเพ็ญเดือน 12 เหนือ ถึงเดือนเกี๋ยงดับ (กันยายน-ตุลาคม) เพื่ออุทิศส่วนกุศลให้ญาติผู้ล่วงลับ บรรพบุรุษ หรือทำบุญอุทิศไว้ในภายหน้า โดยชาวบ้านจะนำก๋วย (ชะลอม/กระชุ) ใส่ผลไม้ อาหารแห้ง และของใช้ มาจับสลากถวายพระสงฆ์ 
@@ -92,7 +92,7 @@
 <section class="about">
     <div class="container"></div>
     <p>5.สงกรานต์ล้านนา (ปี๋ใหม่เมือง)</p>
-    <img src="images/Pimai-Mueang.jpg" alt="ปี่ใหม่เมือง" class="card-img">
+    <img src="Pimai-Mueang.jpg" alt="ปี่ใหม่เมือง" class="card-img">
      <div class="card">
         <p>ประเพณีปี๋ใหม่เมือง หรือสงกรานต์ล้านนา จัดขึ้นระหว่างวันที่ 13-15 เมษายน (และยาวนานกว่านั้นในบางพื้นที่) เพื่อเฉลิมฉลองวันขึ้นปีใหม่แบบล้านนา มีกิจกรรมหลักคือวันสังขารล่อง (ส่งท้ายปีเก่า), วันเนา (วันดา/วันกลาง) และวันพญาวัน (ขึ้นปีใหม่) เน้นทำบุญตักบาตร, สรงน้ำพระ, ขนทรายเข้าวัด, ก่อเจดีย์ทราย และรดน้ำดำหัวผู้ใหญ่ เพื่อความเป็นสิริมงคล</p>
         
