--- a/dress.html
+++ b/dress.html
@@ -19,7 +19,7 @@
     <div class="container"></div>
     <h2>การแต่งกายภาคเหนือ</h2>
     <p>1.การแต่งกายของผู้หญิง (แม่หญิงล้านนา)</p>
-    <img src="images/ying.jpg alt="หญิงล้านนา" class="card-img">
+    <img src="ying.jpg="หญิงล้านนา" class="card-img">
      <div class="card">
         <p>การแต่งกายของแม่หญิงล้านนา (ภาคเหนือ) มีเอกลักษณ์โดดเด่นสะท้อนวัฒนธรรมที่อ่อนช้อย นุ่งผ้าซิ่นความยาวเกือบตาตุ่มที่มีตีนซิ่นลายสวยงาม (เช่น ซิ่นตีนจก, ซิ่นน้ำปาด) คู่กับเสื้อแขนกระบอกพอดีตัว หรือเสื้อคอกลมแขนสั้น/ยาว ห่มสไบเฉียงทับ เกล้าผมสูง และปักปิ่นประดับ ดูสุภาพ งดงาม และนิยมสวมใส่ในงานบุญ </p>
         </div>
@@ -28,7 +28,7 @@
 <section class="about">
     <div class="container"></div>
     <p>2.การแต่งกายของผู้ชาย (พ่อเลี้ยงล้านนา)</p>
-    <img src="images/Chai.jpg alt="ชายล้านนา" class="card-img">
+    <img src="Chai.jpg"ชายล้านนา" class="card-img">
      <div class="card">
         <p>การแต่งกายชายชาวล้านนาในอดีต (พ่อเลี้ยง/พ่ออุ้ย) เน้นความเรียบง่าย กระฉับกระเฉง นิยมเปลือยท่อนบนหรือสวมเสื้อม่อฮ่อม นุ่งเตี่ยวสะดอ (กางเกงเป้าต่ำ) หรือผ้าต้อย สวมผ้าเช็ดพาดไหล่ โดดเด่นด้วยการสักขาลายตั้งแต่เอวถึงเข่าเพื่อแสดงความเป็นชายชาตรีและรอยสักเป็นที่นิยมมาก </p>
         </div>
